fixing broken markdown and placeholder are visible again

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .you-provide {
-    color: #4e4;
+    color:  #118811;
     font-weight: bold;
 }
 
